[package]
name = "wombat"
version = "0.1.0"
authors = ["Frédéric Cabestre <frederic.cabestre@free.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.1.29"
pretty_env_logger = "0.3.1"
warp = "0.1.20"
serde = {version = "1.0.102", features = ["derive"]}
serde_json = "1.0.41"
tokio = "0.1.22"
tokio-fs = "0.1.6"
tokio-timer = "0.2.11"
guid-create = "0.1.1"

